[package]
name = "dropdata_parser"
version = "0.1.0"
authors = ["valarauca <codylaeder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.9"
lrlex = "0.9"
lrpar = "0.9"

[dependencies]
cfgrammar = "0.9"
lrlex = "0.9"
lrpar = "0.9"
regex = "1.0"
lazy_static = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
